Entrega1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declarations functions MAIN body END
Rule 2     declarations -> vars
Rule 3     declarations -> empty
Rule 4     functions -> funcs functions
Rule 5     functions -> empty
Rule 6     vars -> VAR var_declaration var_declaration_list
Rule 7     var_declaration -> identifier_list COLON type SEMICOLON
Rule 8     identifier_list -> ID identifier_list_tail
Rule 9     identifier_list_tail -> COMMA ID identifier_list_tail
Rule 10    identifier_list_tail -> empty
Rule 11    var_declaration_list -> var_declaration var_declaration_list
Rule 12    var_declaration_list -> empty
Rule 13    type -> INT_TYPE
Rule 14    type -> FLOAT_TYPE
Rule 15    body -> LBRACES statement_list RBRACES
Rule 16    statement_list -> statement statement_list
Rule 17    statement_list -> empty
Rule 18    statement -> print_func
Rule 19    statement -> condition
Rule 20    statement -> cycle
Rule 21    statement -> RETURN expression
Rule 22    statement -> ID id_option
Rule 23    statement -> LBRACKETS statement_list RBRACKETS
Rule 24    id_option -> f_call SEMICOLON
Rule 25    id_option -> assign
Rule 26    print_func -> PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
Rule 27    print_element -> expression
Rule 28    print_element -> CTE_STRING
Rule 29    print_element_list -> COMMA print_element print_element_list
Rule 30    print_element_list -> empty
Rule 31    assign -> EQUALS expression SEMICOLON
Rule 32    cycle -> WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON
Rule 33    condition -> IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
Rule 34    else_part -> ELSE body
Rule 35    else_part -> empty
Rule 36    expression -> exp comparison
Rule 37    comparison -> GREATER exp
Rule 38    comparison -> LESS exp
Rule 39    comparison -> DIFFERENT exp
Rule 40    comparison -> STRICT_EQUAL exp
Rule 41    comparison -> empty
Rule 42    exp -> term add_sub
Rule 43    add_sub -> PLUS term add_sub
Rule 44    add_sub -> MINUS term add_sub
Rule 45    add_sub -> empty
Rule 46    term -> factor mult_div
Rule 47    mult_div -> TIMES factor mult_div
Rule 48    mult_div -> DIVIDE factor mult_div
Rule 49    mult_div -> empty
Rule 50    factor -> grouping
Rule 51    factor -> unary_sign
Rule 52    factor -> cte
Rule 53    factor -> ID id_func_option
Rule 54    id_func_option -> f_call
Rule 55    id_func_option -> empty
Rule 56    grouping -> LPARENTESIS expression RPARENTESIS
Rule 57    unary_sign -> PLUS value
Rule 58    unary_sign -> MINUS value
Rule 59    value -> ID
Rule 60    value -> cte
Rule 61    cte -> CTE_INT
Rule 62    cte -> CTE_FLOAT
Rule 63    funcs -> funcs_type ID LPARENTESIS parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON
Rule 64    funcs_type -> VOID
Rule 65    funcs_type -> type
Rule 66    parameters -> parameter parameter_list
Rule 67    parameters -> empty
Rule 68    parameter -> ID COLON type
Rule 69    parameter_list -> COMMA parameter parameter_list
Rule 70    parameter_list -> empty
Rule 71    function_block -> vars body
Rule 72    function_block -> body
Rule 73    f_call -> LPARENTESIS arguments RPARENTESIS
Rule 74    arguments -> expression argument_list
Rule 75    arguments -> empty
Rule 76    argument_list -> COMMA expression argument_list
Rule 77    argument_list -> empty
Rule 78    empty -> <empty>

Terminals, with rules where they appear

COLON                : 7 68
COMMA                : 9 29 69 76
CTE_FLOAT            : 62
CTE_INT              : 61
CTE_STRING           : 28
DIFFERENT            : 39
DIVIDE               : 48
DO                   : 32
ELSE                 : 34
END                  : 1
EQUALS               : 31
FLOAT_TYPE           : 14
GREATER              : 37
ID                   : 1 8 9 22 53 59 63 68
IF                   : 33
INT_TYPE             : 13
LBRACES              : 15 63
LBRACKETS            : 23
LESS                 : 38
LPARENTESIS          : 26 32 33 56 63 73
MAIN                 : 1
MINUS                : 44 58
PLUS                 : 43 57
PRINT                : 26
PROGRAM              : 1
RBRACES              : 15 63
RBRACKETS            : 23
RETURN               : 21
RPARENTESIS          : 26 32 33 56 63 73
SEMICOLON            : 1 7 24 26 31 32 33 63
STRICT_EQUAL         : 40
TIMES                : 47
VAR                  : 6
VOID                 : 64
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

add_sub              : 42 43 44
argument_list        : 74 76
arguments            : 73
assign               : 25
body                 : 1 32 33 34 71 72
comparison           : 36
condition            : 19
cte                  : 52 60
cycle                : 20
declarations         : 1
else_part            : 33
empty                : 3 5 10 12 17 30 35 41 45 49 55 67 70 75 77
exp                  : 36 37 38 39 40
expression           : 21 27 31 32 33 56 74 76
f_call               : 24 54
factor               : 46 47 48
funcs                : 4
funcs_type           : 63
function_block       : 63
functions            : 1 4
grouping             : 50
id_func_option       : 53
id_option            : 22
identifier_list      : 7
identifier_list_tail : 8 9
mult_div             : 46 47 48
parameter            : 66 69
parameter_list       : 66 69
parameters           : 63
print_element        : 26 29
print_element_list   : 26 29
print_func           : 18
program              : 0
statement            : 16
statement_list       : 15 16 23
term                 : 42 43 44
type                 : 7 65 68
unary_sign           : 51
value                : 57 58
var_declaration      : 6 11
var_declaration_list : 6 11
vars                 : 2 71

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declarations functions MAIN body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declarations functions MAIN body END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declarations functions MAIN body END

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declarations functions MAIN body END
    (2) declarations -> . vars
    (3) declarations -> . empty
    (6) vars -> . VAR var_declaration var_declaration_list
    (78) empty -> .

    VAR             shift and go to state 8
    VOID            reduce using rule 78 (empty -> .)
    INT_TYPE        reduce using rule 78 (empty -> .)
    FLOAT_TYPE      reduce using rule 78 (empty -> .)
    MAIN            reduce using rule 78 (empty -> .)

    declarations                   shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON declarations . functions MAIN body END
    (4) functions -> . funcs functions
    (5) functions -> . empty
    (63) funcs -> . funcs_type ID LPARENTESIS parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON
    (78) empty -> .
    (64) funcs_type -> . VOID
    (65) funcs_type -> . type
    (13) type -> . INT_TYPE
    (14) type -> . FLOAT_TYPE

    MAIN            reduce using rule 78 (empty -> .)
    VOID            shift and go to state 13
    INT_TYPE        shift and go to state 15
    FLOAT_TYPE      shift and go to state 16

    functions                      shift and go to state 9
    funcs                          shift and go to state 10
    empty                          shift and go to state 11
    funcs_type                     shift and go to state 12
    type                           shift and go to state 14

state 6

    (2) declarations -> vars .

    VOID            reduce using rule 2 (declarations -> vars .)
    INT_TYPE        reduce using rule 2 (declarations -> vars .)
    FLOAT_TYPE      reduce using rule 2 (declarations -> vars .)
    MAIN            reduce using rule 2 (declarations -> vars .)


state 7

    (3) declarations -> empty .

    VOID            reduce using rule 3 (declarations -> empty .)
    INT_TYPE        reduce using rule 3 (declarations -> empty .)
    FLOAT_TYPE      reduce using rule 3 (declarations -> empty .)
    MAIN            reduce using rule 3 (declarations -> empty .)


state 8

    (6) vars -> VAR . var_declaration var_declaration_list
    (7) var_declaration -> . identifier_list COLON type SEMICOLON
    (8) identifier_list -> . ID identifier_list_tail

    ID              shift and go to state 19

    var_declaration                shift and go to state 17
    identifier_list                shift and go to state 18

state 9

    (1) program -> PROGRAM ID SEMICOLON declarations functions . MAIN body END

    MAIN            shift and go to state 20


state 10

    (4) functions -> funcs . functions
    (4) functions -> . funcs functions
    (5) functions -> . empty
    (63) funcs -> . funcs_type ID LPARENTESIS parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON
    (78) empty -> .
    (64) funcs_type -> . VOID
    (65) funcs_type -> . type
    (13) type -> . INT_TYPE
    (14) type -> . FLOAT_TYPE

    MAIN            reduce using rule 78 (empty -> .)
    VOID            shift and go to state 13
    INT_TYPE        shift and go to state 15
    FLOAT_TYPE      shift and go to state 16

    funcs                          shift and go to state 10
    functions                      shift and go to state 21
    empty                          shift and go to state 11
    funcs_type                     shift and go to state 12
    type                           shift and go to state 14

state 11

    (5) functions -> empty .

    MAIN            reduce using rule 5 (functions -> empty .)


state 12

    (63) funcs -> funcs_type . ID LPARENTESIS parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON

    ID              shift and go to state 22


state 13

    (64) funcs_type -> VOID .

    ID              reduce using rule 64 (funcs_type -> VOID .)


state 14

    (65) funcs_type -> type .

    ID              reduce using rule 65 (funcs_type -> type .)


state 15

    (13) type -> INT_TYPE .

    ID              reduce using rule 13 (type -> INT_TYPE .)
    SEMICOLON       reduce using rule 13 (type -> INT_TYPE .)
    COMMA           reduce using rule 13 (type -> INT_TYPE .)
    RPARENTESIS     reduce using rule 13 (type -> INT_TYPE .)


state 16

    (14) type -> FLOAT_TYPE .

    ID              reduce using rule 14 (type -> FLOAT_TYPE .)
    SEMICOLON       reduce using rule 14 (type -> FLOAT_TYPE .)
    COMMA           reduce using rule 14 (type -> FLOAT_TYPE .)
    RPARENTESIS     reduce using rule 14 (type -> FLOAT_TYPE .)


state 17

    (6) vars -> VAR var_declaration . var_declaration_list
    (11) var_declaration_list -> . var_declaration var_declaration_list
    (12) var_declaration_list -> . empty
    (7) var_declaration -> . identifier_list COLON type SEMICOLON
    (78) empty -> .
    (8) identifier_list -> . ID identifier_list_tail

    VOID            reduce using rule 78 (empty -> .)
    INT_TYPE        reduce using rule 78 (empty -> .)
    FLOAT_TYPE      reduce using rule 78 (empty -> .)
    MAIN            reduce using rule 78 (empty -> .)
    LBRACES         reduce using rule 78 (empty -> .)
    ID              shift and go to state 19

    var_declaration                shift and go to state 23
    var_declaration_list           shift and go to state 24
    empty                          shift and go to state 25
    identifier_list                shift and go to state 18

state 18

    (7) var_declaration -> identifier_list . COLON type SEMICOLON

    COLON           shift and go to state 26


state 19

    (8) identifier_list -> ID . identifier_list_tail
    (9) identifier_list_tail -> . COMMA ID identifier_list_tail
    (10) identifier_list_tail -> . empty
    (78) empty -> .

    COMMA           shift and go to state 28
    COLON           reduce using rule 78 (empty -> .)

    identifier_list_tail           shift and go to state 27
    empty                          shift and go to state 29

state 20

    (1) program -> PROGRAM ID SEMICOLON declarations functions MAIN . body END
    (15) body -> . LBRACES statement_list RBRACES

    LBRACES         shift and go to state 31

    body                           shift and go to state 30

state 21

    (4) functions -> funcs functions .

    MAIN            reduce using rule 4 (functions -> funcs functions .)


state 22

    (63) funcs -> funcs_type ID . LPARENTESIS parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON

    LPARENTESIS     shift and go to state 32


state 23

    (11) var_declaration_list -> var_declaration . var_declaration_list
    (11) var_declaration_list -> . var_declaration var_declaration_list
    (12) var_declaration_list -> . empty
    (7) var_declaration -> . identifier_list COLON type SEMICOLON
    (78) empty -> .
    (8) identifier_list -> . ID identifier_list_tail

    VOID            reduce using rule 78 (empty -> .)
    INT_TYPE        reduce using rule 78 (empty -> .)
    FLOAT_TYPE      reduce using rule 78 (empty -> .)
    MAIN            reduce using rule 78 (empty -> .)
    LBRACES         reduce using rule 78 (empty -> .)
    ID              shift and go to state 19

    var_declaration                shift and go to state 23
    var_declaration_list           shift and go to state 33
    empty                          shift and go to state 25
    identifier_list                shift and go to state 18

state 24

    (6) vars -> VAR var_declaration var_declaration_list .

    VOID            reduce using rule 6 (vars -> VAR var_declaration var_declaration_list .)
    INT_TYPE        reduce using rule 6 (vars -> VAR var_declaration var_declaration_list .)
    FLOAT_TYPE      reduce using rule 6 (vars -> VAR var_declaration var_declaration_list .)
    MAIN            reduce using rule 6 (vars -> VAR var_declaration var_declaration_list .)
    LBRACES         reduce using rule 6 (vars -> VAR var_declaration var_declaration_list .)


state 25

    (12) var_declaration_list -> empty .

    VOID            reduce using rule 12 (var_declaration_list -> empty .)
    INT_TYPE        reduce using rule 12 (var_declaration_list -> empty .)
    FLOAT_TYPE      reduce using rule 12 (var_declaration_list -> empty .)
    MAIN            reduce using rule 12 (var_declaration_list -> empty .)
    LBRACES         reduce using rule 12 (var_declaration_list -> empty .)


state 26

    (7) var_declaration -> identifier_list COLON . type SEMICOLON
    (13) type -> . INT_TYPE
    (14) type -> . FLOAT_TYPE

    INT_TYPE        shift and go to state 15
    FLOAT_TYPE      shift and go to state 16

    type                           shift and go to state 34

state 27

    (8) identifier_list -> ID identifier_list_tail .

    COLON           reduce using rule 8 (identifier_list -> ID identifier_list_tail .)


state 28

    (9) identifier_list_tail -> COMMA . ID identifier_list_tail

    ID              shift and go to state 35


state 29

    (10) identifier_list_tail -> empty .

    COLON           reduce using rule 10 (identifier_list_tail -> empty .)


state 30

    (1) program -> PROGRAM ID SEMICOLON declarations functions MAIN body . END

    END             shift and go to state 36


state 31

    (15) body -> LBRACES . statement_list RBRACES
    (16) statement_list -> . statement statement_list
    (17) statement_list -> . empty
    (18) statement -> . print_func
    (19) statement -> . condition
    (20) statement -> . cycle
    (21) statement -> . RETURN expression
    (22) statement -> . ID id_option
    (23) statement -> . LBRACKETS statement_list RBRACKETS
    (78) empty -> .
    (26) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (33) condition -> . IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
    (32) cycle -> . WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    RETURN          shift and go to state 43
    ID              shift and go to state 44
    LBRACKETS       shift and go to state 45
    RBRACES         reduce using rule 78 (empty -> .)
    PRINT           shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48

    statement_list                 shift and go to state 37
    statement                      shift and go to state 38
    empty                          shift and go to state 39
    print_func                     shift and go to state 40
    condition                      shift and go to state 41
    cycle                          shift and go to state 42

state 32

    (63) funcs -> funcs_type ID LPARENTESIS . parameters RPARENTESIS LBRACES function_block RBRACES SEMICOLON
    (66) parameters -> . parameter parameter_list
    (67) parameters -> . empty
    (68) parameter -> . ID COLON type
    (78) empty -> .

    ID              shift and go to state 49
    RPARENTESIS     reduce using rule 78 (empty -> .)

    parameters                     shift and go to state 50
    parameter                      shift and go to state 51
    empty                          shift and go to state 52

state 33

    (11) var_declaration_list -> var_declaration var_declaration_list .

    VOID            reduce using rule 11 (var_declaration_list -> var_declaration var_declaration_list .)
    INT_TYPE        reduce using rule 11 (var_declaration_list -> var_declaration var_declaration_list .)
    FLOAT_TYPE      reduce using rule 11 (var_declaration_list -> var_declaration var_declaration_list .)
    MAIN            reduce using rule 11 (var_declaration_list -> var_declaration var_declaration_list .)
    LBRACES         reduce using rule 11 (var_declaration_list -> var_declaration var_declaration_list .)


state 34

    (7) var_declaration -> identifier_list COLON type . SEMICOLON

    SEMICOLON       shift and go to state 53


state 35

    (9) identifier_list_tail -> COMMA ID . identifier_list_tail
    (9) identifier_list_tail -> . COMMA ID identifier_list_tail
    (10) identifier_list_tail -> . empty
    (78) empty -> .

    COMMA           shift and go to state 28
    COLON           reduce using rule 78 (empty -> .)

    identifier_list_tail           shift and go to state 54
    empty                          shift and go to state 29

state 36

    (1) program -> PROGRAM ID SEMICOLON declarations functions MAIN body END .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declarations functions MAIN body END .)


state 37

    (15) body -> LBRACES statement_list . RBRACES

    RBRACES         shift and go to state 55


state 38

    (16) statement_list -> statement . statement_list
    (16) statement_list -> . statement statement_list
    (17) statement_list -> . empty
    (18) statement -> . print_func
    (19) statement -> . condition
    (20) statement -> . cycle
    (21) statement -> . RETURN expression
    (22) statement -> . ID id_option
    (23) statement -> . LBRACKETS statement_list RBRACKETS
    (78) empty -> .
    (26) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (33) condition -> . IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
    (32) cycle -> . WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    RETURN          shift and go to state 43
    ID              shift and go to state 44
    LBRACKETS       shift and go to state 45
    RBRACES         reduce using rule 78 (empty -> .)
    RBRACKETS       reduce using rule 78 (empty -> .)
    PRINT           shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48

    statement                      shift and go to state 38
    statement_list                 shift and go to state 56
    empty                          shift and go to state 39
    print_func                     shift and go to state 40
    condition                      shift and go to state 41
    cycle                          shift and go to state 42

state 39

    (17) statement_list -> empty .

    RBRACES         reduce using rule 17 (statement_list -> empty .)
    RBRACKETS       reduce using rule 17 (statement_list -> empty .)


state 40

    (18) statement -> print_func .

    RETURN          reduce using rule 18 (statement -> print_func .)
    ID              reduce using rule 18 (statement -> print_func .)
    LBRACKETS       reduce using rule 18 (statement -> print_func .)
    PRINT           reduce using rule 18 (statement -> print_func .)
    IF              reduce using rule 18 (statement -> print_func .)
    WHILE           reduce using rule 18 (statement -> print_func .)
    RBRACES         reduce using rule 18 (statement -> print_func .)
    RBRACKETS       reduce using rule 18 (statement -> print_func .)


state 41

    (19) statement -> condition .

    RETURN          reduce using rule 19 (statement -> condition .)
    ID              reduce using rule 19 (statement -> condition .)
    LBRACKETS       reduce using rule 19 (statement -> condition .)
    PRINT           reduce using rule 19 (statement -> condition .)
    IF              reduce using rule 19 (statement -> condition .)
    WHILE           reduce using rule 19 (statement -> condition .)
    RBRACES         reduce using rule 19 (statement -> condition .)
    RBRACKETS       reduce using rule 19 (statement -> condition .)


state 42

    (20) statement -> cycle .

    RETURN          reduce using rule 20 (statement -> cycle .)
    ID              reduce using rule 20 (statement -> cycle .)
    LBRACKETS       reduce using rule 20 (statement -> cycle .)
    PRINT           reduce using rule 20 (statement -> cycle .)
    IF              reduce using rule 20 (statement -> cycle .)
    WHILE           reduce using rule 20 (statement -> cycle .)
    RBRACES         reduce using rule 20 (statement -> cycle .)
    RBRACKETS       reduce using rule 20 (statement -> cycle .)


state 43

    (21) statement -> RETURN . expression
    (36) expression -> . exp comparison
    (42) exp -> . term add_sub
    (46) term -> . factor mult_div
    (50) factor -> . grouping
    (51) factor -> . unary_sign
    (52) factor -> . cte
    (53) factor -> . ID id_func_option
    (56) grouping -> . LPARENTESIS expression RPARENTESIS
    (57) unary_sign -> . PLUS value
    (58) unary_sign -> . MINUS value
    (61) cte -> . CTE_INT
    (62) cte -> . CTE_FLOAT

    ID              shift and go to state 64
    LPARENTESIS     shift and go to state 65
    PLUS            shift and go to state 66
    MINUS           shift and go to state 67
    CTE_INT         shift and go to state 68
    CTE_FLOAT       shift and go to state 69

    expression                     shift and go to state 57
    exp                            shift and go to state 58
    term                           shift and go to state 59
    factor                         shift and go to state 60
    grouping                       shift and go to state 61
    unary_sign                     shift and go to state 62
    cte                            shift and go to state 63

state 44

    (22) statement -> ID . id_option
    (24) id_option -> . f_call SEMICOLON
    (25) id_option -> . assign
    (73) f_call -> . LPARENTESIS arguments RPARENTESIS
    (31) assign -> . EQUALS expression SEMICOLON

    LPARENTESIS     shift and go to state 73
    EQUALS          shift and go to state 74

    id_option                      shift and go to state 70
    f_call                         shift and go to state 71
    assign                         shift and go to state 72

state 45

    (23) statement -> LBRACKETS . statement_list RBRACKETS
    (16) statement_list -> . statement statement_list
    (17) statement_list -> . empty
    (18) statement -> . print_func
    (19) statement -> . condition
    (20) statement -> . cycle
    (21) statement -> . RETURN expression
    (22) statement -> . ID id_option
    (23) statement -> . LBRACKETS statement_list RBRACKETS
    (78) empty -> .
    (26) print_func -> . PRINT LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON
    (33) condition -> . IF LPARENTESIS expression RPARENTESIS body else_part SEMICOLON
    (32) cycle -> . WHILE LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    RETURN          shift and go to state 43
    ID              shift and go to state 44
    LBRACKETS       shift and go to state 45
    RBRACKETS       reduce using rule 78 (empty -> .)
    PRINT           shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48

    statement_list                 shift and go to state 75
    statement                      shift and go to state 38
    empty                          shift and go to state 39
    print_func                     shift and go to state 40
    condition                      shift and go to state 41
    cycle                          shift and go to state 42

state 46

    (26) print_func -> PRINT . LPARENTESIS print_element print_element_list RPARENTESIS SEMICOLON

    LPARENTESIS     shift and go to state 76


state 47

    (33) condition -> IF . LPARENTESIS expression RPARENTESIS body else_part SEMICOLON

    LPARENTESIS     shift and go to state 77


state 48

    (32) cycle -> WHILE . LPARENTESIS expression RPARENTESIS DO body SEMICOLON

    LPARENTESIS     shift and go to state 78


state 49

    (68) parameter -> ID . COLON type

    COLON           shift and go to state 79


state 50

    (63) funcs -> funcs_type ID LPARENTESIS parameters . RPARENTESIS LBRACES function_block RBRACES SEMICOLON

    RPARENTESIS     shift and go to state 80


state 51

    (66) parameters -> parameter . parameter_list
    (69) parameter_list -> . COMMA parameter parameter_list
    (70) parameter_list -> . empty
    (78) empty -> .

    COMMA           shift and go to state 82
    RPARENTESIS     reduce using rule 78 (empty -> .)

    parameter_list                 shift and go to state 81
    empty                          shift and go to state 83

state 52

    (67) parameters -> empty .

    RPARENTESIS     reduce using rule 67 (parameters -> empty .)


state 53

    (7) var_declaration -> identifier_list COLON type SEMICOLON .

    ID              reduce using rule 7 (var_declaration -> identifier_list COLON type SEMICOLON .)
    VOID            reduce using rule 7 (var_declaration -> identifier_list COLON type SEMICOLON .)
    INT_TYPE        reduce using rule 7 (var_declaration -> identifier_list COLON type SEMICOLON .)
    FLOAT_TYPE      reduce using rule 7 (var_declaration -> identifier_list COLON type SEMICOLON .)
    MAIN            reduce using rule 7 (var_declaration -> identifier_list COLON type SEMICOLON .)
    LBRACES         reduce using rule 7 (var_declaration -> identifier_list COLON type SEMICOLON .)


state 54

    (9) identifier_list_tail -> COMMA ID identifier_list_tail .

    COLON           reduce using rule 9 (identifier_list_tail -> COMMA ID identifier_list_tail .)


state 55

    (15) body -> LBRACES statement_list RBRACES .

    END             reduce using rule 15 (body -> LBRACES statement_list RBRACES .)
    RBRACES         reduce using rule 15 (body -> LBRACES statement_list RBRACES .)
    ELSE            reduce using rule 15 (body -> LBRACES statement_list RBRACES .)
    SEMICOLON       reduce using rule 15 (body -> LBRACES statement_list RBRACES .)


state 56

    (16) statement_list -> statement statement_list .

    RBRACES         reduce using rule 16 (statement_list -> statement statement_list .)
    RBRACKETS       reduce using rule 16 (statement_list -> statement statement_list .)


state 57

    (21) statement -> RETURN expression .

    RETURN          reduce using rule 21 (statement -> RETURN expression .)
    ID              reduce using rule 21 (statement -> RETURN expression .)
    LBRACKETS       reduce using rule 21 (statement -> RETURN expression .)
    PRINT           reduce using rule 21 (statement -> RETURN expression .)
    IF              reduce using rule 21 (statement -> RETURN expression .)
    WHILE           reduce using rule 21 (statement -> RETURN expression .)
    RBRACES         reduce using rule 21 (statement -> RETURN expression .)
    RBRACKETS       reduce using rule 21 (statement -> RETURN expression .)


state 58

    (36) expression -> exp . comparison
    (37) comparison -> . GREATER exp
    (38) comparison -> . LESS exp
    (39) comparison -> . DIFFERENT exp
    (40) comparison -> . STRICT_EQUAL exp
    (41) comparison -> . empty
    (78) empty -> .

    GREATER         shift and go to state 85
    LESS            shift and go to state 86
    DIFFERENT       shift and go to state 87
    STRICT_EQUAL    shift and go to state 88
    RETURN          reduce using rule 78 (empty -> .)
    ID              reduce using rule 78 (empty -> .)
    LBRACKETS       reduce using rule 78 (empty -> .)
    PRINT           reduce using rule 78 (empty -> .)
    IF              reduce using rule 78 (empty -> .)
    WHILE           reduce using rule 78 (empty -> .)
    RBRACES         reduce using rule 78 (empty -> .)
    RBRACKETS       reduce using rule 78 (empty -> .)
    RPARENTESIS     reduce using rule 78 (empty -> .)
    COMMA           reduce using rule 78 (empty -> .)
    SEMICOLON       reduce using rule 78 (empty -> .)

    comparison                     shift and go to state 84
    empty                          shift and go to state 89

state 59

    (42) exp -> term . add_sub
    (43) add_sub -> . PLUS term add_sub
    (44) add_sub -> . MINUS term add_sub
    (45) add_sub -> . empty
    (78) empty -> .

    PLUS            shift and go to state 91
    MINUS           shift and go to state 92
    GREATER         reduce using rule 78 (empty -> .)
    LESS            reduce using rule 78 (empty -> .)
    DIFFERENT       reduce using rule 78 (empty -> .)
    STRICT_EQUAL    reduce using rule 78 (empty -> .)
    RETURN          reduce using rule 78 (empty -> .)
    ID              reduce using rule 78 (empty -> .)
    LBRACKETS       reduce using rule 78 (empty -> .)
    PRINT           reduce using rule 78 (empty -> .)
    IF              reduce using rule 78 (empty -> .)
    WHILE           reduce using rule 78 (empty -> .)
    RBRACES         reduce using rule 78 (empty -> .)
    RBRACKETS       reduce using rule 78 (empty -> .)
    RPARENTESIS     reduce using rule 78 (empty -> .)
    COMMA           reduce using rule 78 (empty -> .)
    SEMICOLON       reduce using rule 78 (empty -> .)

    add_sub                        shift and go to state 90
    empty                          shift and go to state 93

state 60
